<resources>
    <string name="app_name">My Application</string>
    <string name="authorization_text">Авторизация</string>
    <string name="username_help_text">Введите свой username</string>
    <string name="password_help_text">Введите свой пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="temperature_is_">Температура %1s *С</string>
    <string name="humidity_is_">Влажность %1s %%</string>
</resources>