<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textDashboard"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/title_dashboard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temperature_is_" />

            <TextView
                android:id="@+id/humidity_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/humidity_is_" />
        </LinearLayout>

        <TextView
            android:id="@+id/temperature_text_field"
            android:layout_width="318dp"
            android:layout_height="78dp"
            android:text="@string/temperature_is_" />

        <TextView
            android:id="@+id/testWsConnection"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:text="" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>