<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

<!--    <EditText-->
<!--        android:id="@+id/inputUsernameView"-->
<!--        android:layout_width="303dp"-->
<!--        android:layout_height="81dp"-->
<!--        android:autofillHints=""-->
<!--        android:ems="10"-->
<!--        android:hint="@string/username_help_text"-->
<!--        android:inputType="textPersonName"-->

<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/inputPasswordView"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:autofillHints=""-->
<!--        android:ems="10"-->
<!--        android:hint="@string/password_help_text"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.486"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/inputUsernameView"-->
<!--        tools:ignore="TextContrastCheck" -->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="285dp"-->
<!--        android:layout_height="65dp"-->
<!--        android:text="@string/authorization_text"-->
<!--        android:textSize="34sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteY="77dp" -->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login_button_text"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="173dp"-->
<!--        tools:layout_editor_absoluteY="467dp" -->
<!--        />-->


    <TextView
        android:id="@+id/auth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/authorization_text"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usernameInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/username_help_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_help_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="201dp"
        android:layout_height="51dp"
        android:onClick="sendLoginAndPassword"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputView"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>